--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div id="plot"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.1/d3.min.js"></script>
     <script src="plots.js"></script>
-
-    <script src="data.json"></script>
+    <script src="data/data.json"></script>
 </body>
 </html>
